# ess-mcp

./: .gitignore  README.md  capture-screenshots.py  check_readonly.py  deploy.sh  fix_early_returns.py  fix_error_propagation.py  start-widget-preview.py
mcp_servers/: .gitignore  Dockerfile  README.md  check_meta.py  check_wire.py  pyproject.toml
mcp_servers/.github/: copilot-instructions.md
mcp_servers/env/: jira.example.env  salesforce.example.env  servicenow.example.env  workday.example.env
mcp_servers/src/mcp_servers/: __init__.py  cli.py  logging.py  settings.py
mcp_servers/src/mcp_servers/ariba/: __init__.py  resources.py  server.py  tools.py
mcp_servers/src/mcp_servers/auth/: __init__.py  entra.py
mcp_servers/src/mcp_servers/coupa/: __init__.py  resources.py  server.py  tools.py
mcp_servers/src/mcp_servers/http/: __init__.py  clients.py  retry.py
mcp_servers/src/mcp_servers/jira/: __init__.py  resources.py  server.py  tools.py
mcp_servers/src/mcp_servers/salesforce/: __init__.py  resources.py  server.py  tools.py
mcp_servers/src/mcp_servers/sap_sf/: __init__.py  resources.py  server.py  tools.py
mcp_servers/src/mcp_servers/servicenow/: __init__.py  resources.py  server.py  tools.py
mcp_servers/src/mcp_servers/ui/widget/: approval-review.html  ariba-approval-list.html  ariba-catalog-search.html  ariba-confirm-action.html  ariba-create-receipt.html  ariba-create-requisition.html  ariba-invoice-status.html  cart-summary.html  (+69 more)
mcp_servers/src/mcp_servers/workday/: __init__.py  config.py  helpers.py  resources.py  schemas.py  server.py  tools.py
(+20 files in other folders)
